@@ -1,4 +1,4 @@
-# Examples
+# Wickra Copilot examples
 
 A runnable "build a market context" example in every language. Each one builds a
 copilot from the same spec (a single `price_move` fact over a 3-bar lookback),
@@ -7,43 +7,133 @@ version and the resulting `MarketContext`. The examples are self-contained: the
 spec and feeds are inline, so there is no shared `data/` directory to load (the
 cross-language golden fixtures live in [`../golden/`](../golden)).
 
-| Language | Path | Run |
-|----------|------|-----|
-| Rust | [`rust/`](rust/) | `cargo run -p wickra-copilot-example` |
-| Python | [`python/context.py`](python/context.py) | `pip install wickra-copilot && python examples/python/context.py` |
-| Node.js | [`node/`](node/) | `cd examples/node && npm install && node context.js` |
-| C / C++ | [`c/`](c/) | see below |
-| Go | [`go/`](go/) | `cd examples/go && go run .` |
-| C# | [`csharp/Context/`](csharp/Context/) | `dotnet run --project examples/csharp/Context` |
-| Java | [`java/Context.java`](java/Context.java) | see the header comment |
-| R | [`r/context.R`](r/context.R) | `Rscript examples/r/context.R` |
-| WASM | [`wasm/`](wasm/) | `wasm-pack build bindings/wasm --target web`, serve the repository root, open `examples/wasm/context.html` |
+## Rust — `examples/rust/`
 
-The native bindings (Python, Node.js) load their own compiled library. The bindings
-that go through the C ABI (Go, C#, Java, R, and the C / C++ example itself) need the
-C ABI library built first:
+As the CI examples job runs it, from the repository root:
 
 ```bash
-cargo build --release -p wickra-copilot-c
+cargo run -q --manifest-path examples/rust/Cargo.toml
 ```
 
-## C / C++
+| Example | What it does |
+| --- | --- |
+| `src/main.rs` | A runnable Rust example: build a market context with the native `build_context` API and print it. |
 
-The C example calls the four ABI functions directly; the C++ example goes
-through `bindings/c/include/wickra_copilot.hpp`, the header-only hull that owns
-the handle and runs the length-out protocol. `golden_test.c` asserts golden
-parity and operating-mode equivalence over the whole corpus. All three build
-with CMake and run under ctest:
+## C / C++ — `examples/c/`
+
+Build the library first (`cargo build -p wickra-copilot-c --release`), then build and run
+the examples via CMake, as the CI C ABI job does:
 
 ```bash
-cargo build --release -p wickra-copilot-c
 cmake -S examples/c -B examples/c/build
 cmake --build examples/c/build --config Release
 ctest --test-dir examples/c/build -C Release --output-on-failure
 ```
 
-On Windows the build copies `wickra_copilot.dll` next to each executable, since
-there is no rpath.
+| Example | What it does |
+| --- | --- |
+| `context.c` | A minimal C example: build a market context through the wickra-copilot C ABI. |
+| `context.cpp` | A minimal C++ example: build a market context, then ask the same question against the stored context and against the context passed inline -- both through the C++ hull. |
+
+## C# — `examples/csharp/`
+
+As the CI examples job runs it, from the repository root:
+
+```bash
+dotnet run --project examples/csharp/Context
+```
+
+| Example | What it does |
+| --- | --- |
+| `Context/Program.cs` | A runnable .NET example: build a market context through the binding. |
+
+## Go — `examples/go/`
+
+As the CI examples job runs it, from the repository root:
+
+```bash
+cd examples/go && go run .
+```
+
+| Example | What it does |
+| --- | --- |
+| `context.go` | A runnable Go example: build a market context through the binding. |
+
+## R — `examples/r/`
+
+As the CI examples job runs it, from the repository root:
+
+```bash
+R CMD INSTALL bindings/r
+Rscript examples/r/context.R
+```
+
+| Example | What it does |
+| --- | --- |
+| `context.R` | A runnable R example: build a market context through the binding. |
+
+## Java — `examples/java/`
+
+As the CI examples job runs it, from the repository root:
+
+```bash
+mvn -f bindings/java/pom.xml -q package -DskipTests
+javac -cp bindings/java/target/classes examples/java/Context.java -d examples/java/out
+java --enable-native-access=ALL-UNNAMED  -Dnative.lib.dir="$PWD/target/release"  -cp "bindings/java/target/classes:examples/java/out" Context
+```
+
+| Example | What it does |
+| --- | --- |
+| `Context.java` | A runnable Java example: build a market context through the binding. |
+
+## Python — `examples/python/`
+
+As the CI examples job runs it, from the repository root:
+
+```bash
+python -m pip install --require-hashes -r .github/requirements/ci-dev-py3.txt
+( cd bindings/python && maturin build --release --out dist )
+python -m pip install --no-index --find-links bindings/python/dist wickra-copilot
+python examples/python/context.py
+```
+
+| Example | What it does |
+| --- | --- |
+| `context.py` | A runnable Python example: build a market context through the binding. |
+
+## Node.js — `examples/node/`
+
+As the CI examples job runs it, from the repository root:
+
+```bash
+( cd bindings/node && npm install --no-audit --no-fund && npx napi build --platform --release )
+( cd examples/node && npm install --no-audit --no-fund )
+node examples/node/context.js
+```
+
+| Example | What it does |
+| --- | --- |
+| `context.js` | A runnable Node.js example: build a market context through the binding. |
+
+## WASM — `examples/wasm/`
+
+Build the WASM package, serve the repository root, and open the page in a browser;
+the module script inside it is what runs (CI parses it with `node --check`):
+
+```bash
+wasm-pack build bindings/wasm --target web
+python -m http.server 8000     # then open http://localhost:8000/examples/wasm/
+```
+
+| Example | What it does |
+| --- | --- |
+| `context.html` | A runnable example against this binding. |
+
+## Example datasets
+
+The examples are self-contained: the spec and the input are inline, so there is
+no shared `data/` directory to load. The cross-language golden fixtures, which
+every binding is checked against byte for byte, live in [`../golden/`](../golden).
 
 ## Asking a model
 
@@ -65,12 +155,3 @@ WICKRA_COPILOT_PROVIDER=openai \
 
 The grounding context is deterministic; the model's answer is not, and is never
 pinned by any test.
-
-## Expected output
-
-Every context example prints the version and the context, for example:
-
-```text
-wickra-copilot 0.1.0
-{"facts":[{"kind":"price_move","symbol":"BTCUSDT","value":-6.0,"magnitude":6.0,"ts":3,"human":"BTCUSDT dropped -6.00% over the last 3 bars."}],"symbols":["BTCUSDT"],"lookback":3}
-```
